--- a/templates/story.html
+++ b/templates/story.html
@@ -7,6 +7,10 @@
 
 {% block body %}
 <div class="main-container">
+  <div class="mt-3">
+  <div>
+    <iframe src="https://us1.ca.analytics.ibm.com/bi/?perspective=story&amp;pathRef=.public_folders%2FDevelopment%2BPhase%2FGlobal%2BSales%2BStory&amp;closeWindowOnLastView=true&amp;ui_appbar=false&amp;ui_navbar=false&amp;shareMode=embedded&amp;action=view&amp;sceneId=model00000184815ef9f5_00000004&amp;sceneTime=0" width="1280" height="900" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen=""></iframe>
+  </div>
   <div class="sub-container quote m-3">
     <h3>Programmer Jokes API</h3>
     <p id="joke">
