--- a/templates/report.html
+++ b/templates/report.html
@@ -7,12 +7,29 @@
 
 {% block body %}
 <div class="main-container">
-  <div class="sub-container quote m-3">
-    <h3>Programmer Jokes API</h3>
-    <p id="joke">
-      
-    </p>
+  <div>
+    <div>
+      <iframe src="https://us1.ca.analytics.ibm.com/bi/?pathRef=.public_folders%2FDevelopment%2BPhase%2FGlobalSales%2Breport1&amp;closeWindowOnLastView=true&amp;ui_appbar=false&amp;ui_navbar=false&amp;shareMode=embedded&amp;action=run&amp;prompt=false" width="1280" height="900" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen=""></iframe>
+    </div>
+    <div>
+      <iframe src="https://us1.ca.analytics.ibm.com/bi/?pathRef=.public_folders%2FDevelopment%2BPhase%2FGlobalSales%2Breport2&amp;closeWindowOnLastView=true&amp;ui_appbar=false&amp;ui_navbar=false&amp;shareMode=embedded&amp;action=run&amp;prompt=false" width="1280" height="900" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen=""></iframe>
+    </div>
+    <div>
+      <iframe src="https://us1.ca.analytics.ibm.com/bi/?pathRef=.public_folders%2FDevelopment%2BPhase%2FGlobalSales%2Breport%2B3-p&amp;closeWindowOnLastView=true&amp;ui_appbar=false&amp;ui_navbar=false&amp;shareMode=embedded&amp;action=run&amp;prompt=false" width="1280" height="900" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen=""></iframe>
+    </div>
+    <div>
+      <iframe src="https://us1.ca.analytics.ibm.com/bi/?pathRef=.public_folders%2FDevelopment%2BPhase%2FGlobal%2BSales%2Breport4&amp;closeWindowOnLastView=true&amp;ui_appbar=false&amp;ui_navbar=false&amp;shareMode=embedded&amp;action=run&amp;prompt=false" width="1280" height="900" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen=""></iframe>
+    </div>
+    <div>
+    </div>
+    <div class="sub-container quote m-3">
+      <h3>Programmer Jokes API</h3>
+      <p id="joke">
+        
+      </p>
+    </div>
   </div>
+  
 </div>
 <script>
   async function joke() {
